// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleViewComponent is created 1`] = `
<app-simple-view
  FORMAT_DATE_TIMESTAMP={[Function String]}
  clickables$={[Function AnonymousSubject]}
  clicked={[Function EventEmitter]}
  data$={[Function BehaviorSubject]}
  guessType={[Function Function]}
  isClickable="null"
  isDense="false"
  isExpandable="false"
  isExpanded={[Function Boolean]}
  isWidthConstrained={[Function Boolean]}
  keys$={[Function AnonymousSubject]}
  onClicked={[Function Function]}
  subheader="null"
  types$={[Function AnonymousSubject]}
>
  
</app-simple-view>
`;

exports[`SimpleViewComponent with data renders 1`] = `
<app-simple-view
  FORMAT_DATE_TIMESTAMP={[Function String]}
  clickables$={[Function AnonymousSubject]}
  clicked={[Function EventEmitter]}
  data$={[Function BehaviorSubject]}
  guessType={[Function Function]}
  isClickable="null"
  isDense="false"
  isExpandable="false"
  isExpanded={[Function Boolean]}
  isWidthConstrained={[Function Boolean]}
  keys$={[Function AnonymousSubject]}
  onClicked={[Function Function]}
  subheader="null"
  types$={[Function AnonymousSubject]}
>
  <div
    class="position-relative"
  >
    <div
      class="scroll-x-auto"
      ddflexbox="hys"
      style="max-width: 100%;"
    >
      
      
      <mat-list
        class="mat-list-auto-height"
      >
        
        
        
        
        
        
        
        <table>
          
          <tr>
            <td
              style="vertical-align: top;"
            >
              <mat-list-item>
                <span
                  class="no-break-text"
                >
                   undefined 
                </span>
              </mat-list-item>
            </td>
            <td>
              <mat-list-item
                class="ng-trigger ng-trigger-TRIGGER_WobbleX"
                style=""
              >
                <span
                  class="break-text size-data-label"
                >
                  
                  
                  
                  
                  
                  
                  
                  
                  <span
                    style=""
                  >
                     value 
                  </span>
                </span>
              </mat-list-item>
            </td>
          </tr>
        </table>
        
        
      </mat-list>
    </div>
  </div>
</app-simple-view>
`;
